fix:
* Fixes unit tests
* Updates project documentation